Fix page title display on narrow view widths

--- a/_sass/title.scss
+++ b/_sass/title.scss
@@ -9,7 +9,7 @@
 	text-align: center;
 }
 .title_image {
-// 	max-width:100%;
+	max-width: 100%;
 }
 /* TODO: Move the size modifiers to their corresponding blocks (page, features, menu) */
 .title_size_page {
